<resources>
    <string name="app_name">Parking</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="what_is_your_username">username</string>
    <string name="what_is_your_password">password</string>
    <string name="login">login</string>
    <string name="loginform">LoginForm</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="what_is_your_id">หมายเลขทะเบียนรถ</string>
    <string name="what_is_your_model">หมายเลขรุ่น</string>
    <string name="what_is_your_name">ชื่อเจ้าของรถ</string>
    <string name="id_59160969">ID : 59160969</string>
    <string name="panuwat_rueharom">Panuwat Rueharom</string>
    <string name="todo">TODO</string>
    <string name="information">Information</string>
    <string name="about">about</string>
</resources>
